@@ -1,5 +1,9 @@
 2005-02-06  Patrice Dumas  <dumas@centre-cired.fr>
 
+	* texi2html.pl: fix broken detection of USE_UNICODE.
+
+2005-02-06  Patrice Dumas  <dumas@centre-cired.fr>
+
 	* manage_i18n.pl: remove and replace with...
 	* manage_i18n.pl.in: ... added
 	* configure.ac, manage_i18n.pl.in: detect whether it is possible to 
@@ -65,7 +69,7 @@
 	old perl. Report from Sven de Vries.
 	* T2h_i18n.pm: remove useless use that prevented to run on IRIX. 
 	Report from ezra peisach.
-	* Tests/*: remove some $Id: ChangeLog,v 1.187 2005-02-06 16:35:37 pertusus Exp $ rcs tags
+	* Tests/*: remove some $Id: ChangeLog,v 1.188 2005-02-06 17:14:07 pertusus Exp $ rcs tags
 
 2005-02-03  Patrice Dumas  <dumas@centre-cired.fr>
 
